@@ -1,4 +1,5 @@
 # Version 0.5.0
+- Toggle ScrollHandDrag mode by clicking a middle mouse button.
 - Added horizontal scrolling by pressiong Shift + mouse wheel.
 - [#366] Update 'Point from Distance and Angle' tool to read distance and angle between points.
 - [#395] Create Curve tool which uses point as control handle.
